# portal_sspk

./: .dockerignore  .flake8  .isort.cfg  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini
auth/: models.py
authority/: admin.py  apps.py  managers.py  models.py  permisions.py  serializers.py  urls.py  views.py
control_panel/: admin.py  models.py  serializers.py  urls.py  views.py
eva/: admin.py  apps.py  models.py  urls.py  utils.py
eva/ISIAO/: celery.py  models.py  tasks.py  utils.py
eva/Reports/: models.py  urls.py  utils.py  views.py
eva/isiao/: celery.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
eva/reports/: models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
portal/: admin.py  asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
tests/: conftest.py  test_apps.py  test_control_panel.py  test_isiao.py  test_reports.py  test_users.py  test_utils.py
tests/factories/: __init__.py
